--- a/src/components/Monitors/Monitors.css
+++ b/src/components/Monitors/Monitors.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 3fr 1fr;
     margin-top: 20px;
+    grid-gap: 30px;
 }
 
 
@@ -18,5 +19,26 @@
         border-radius: 10px;
         border: 1px solid lightgray;
         margin: 0px 10px;
+        /* position: sticky;
+        bottom: 0; */
         /* height: 600px; */
+}
+
+.choose-btn{
+    background-color: white;
+    color: green;
+    padding: 30px 40px;
+    margin-top: 10px;
+    font-size: 20px;
+    border: 1px solid salmon;
+    font-weight: bolder;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.choose-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    /* position: sticky;
+    top: 0; */
 }
