--- a/src/components/Monitor/Monitor.css
+++ b/src/components/Monitor/Monitor.css
@@ -4,6 +4,8 @@
     padding: 10px;
     border-radius: 10px;
     border: 1px solid lightgray;
+    position: relative;
+    height: 500px;
 }
 
 .monitor img{
@@ -19,4 +21,9 @@
     border-radius: 5px;
     cursor: pointer;
     font-weight: bolder;
+    /* display: flex; */
+    text-align: center;
+    position: absolute;
+    bottom: 10px;
+    left:90px ;
 }
