--- a/src/components/Monitors/Monitors.css
+++ b/src/components/Monitors/Monitors.css
@@ -1,8 +1,9 @@
 .container{
     display: grid;
     grid-template-columns: 3fr 1fr;
-    margin-top: 20px;
+    margin: 20px 10px;
     grid-gap: 30px;
+    
 }
 
 
@@ -19,9 +20,6 @@
         border-radius: 10px;
         border: 1px solid lightgray;
         margin: 0px 10px;
-        /* position: sticky;
-        bottom: 0; */
-        /* height: 600px; */
 }
 
 .choose-btn{
