Answer added and final

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header{
     background-color: lightcoral;
     padding: 20px;
-    /* position: sticky;
-    top: 0; */
+    font-size: 1.5rem;
+    color: #fff;
 }
